mt fix form label alignment and z-index

--- a/blog/blocks/form/form.css
+++ b/blog/blocks/form/form.css
@@ -1,5 +1,6 @@
 /* stylelint-disable selector-class-pattern */
-main .form-container .default-content-wrapper {
+.marketplace main .form-container .default-content-wrapper,
+.pricing-quote main .form-container .default-content-wrapper {
   text-align: center;
 }
 
@@ -18,6 +19,10 @@ main .form .hidden {
 
 main .form h1 {
   margin: 60px 0 90px;
+}
+
+main .form form {
+  text-align: left;
 }
 
 main .form .form-description {
