--- a/blog/styles/styles.css
+++ b/blog/styles/styles.css
@@ -1368,7 +1368,7 @@ body.pricing-quote {
 
 .modal-wrapper.visible {
   opacity: 1;
-  z-index: 1;
+  z-index: 10;
 }
 
 .modal {
